/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
 */

package com.campusclaw.codingagent.runtimeapi.command;

import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.LinkOption;
import java.nio.file.Path;
import java.util.ArrayList;
import java.util.Comparator;
import java.util.List;
import java.util.Optional;

import com.campusclaw.codingagent.runtime.AgentRuntimeManager;
import com.campusclaw.codingagent.runtime.MateServiceClient.SkillInfo;
import com.campusclaw.codingagent.runtime.PreparedAgentRuntime;
import com.campusclaw.codingagent.runtimeapi.dto.RuntimeSessionDTO;
import com.campusclaw.codingagent.runtimeapi.error.RuntimeErrorCode;
import com.campusclaw.codingagent.runtimeapi.session.RuntimeSessionState;
import com.campusclaw.codingagent.skill.SkillNamePatterns;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Service;

/**
 * 从最新完整缓存发现直接绑定 Skill，不触发刷新，保留版本身份但不公开正文与路径。
 * 本类只提供内部发现能力；Skill 命令执行由独立开发线负责。
 *
 * @version [br_eCampusCore 26.0.0, 2026/09/04]
 * @since [br_eCampusCore 26.0.0]
 */
@Service
public class SkillCommandSource implements CommandDefinitionSource {
    private static final Logger LOGGER = LoggerFactory.getLogger(SkillCommandSource.class);

    /**
     * Skill 命令的保留命名空间前缀。
     */
    public static final String COMMAND_PREFIX = "skill:";

    private static final String SKILL_MARKDOWN_FILE = "SKILL.md";

    private final AgentRuntimeManager agentRuntimeManager;

    public SkillCommandSource(AgentRuntimeManager agentRuntimeManager) {
        this.agentRuntimeManager = agentRuntimeManager;
    }

    @Override
    public CommandKind kind() {
        return CommandKind.SKILL;
    }

    @Override
    public List<ResolvedCommandDTO> list(RuntimeSessionDTO session) {
        PreparedAgentRuntime prepared = agentRuntimeManager.prepareCached(session.getAgentId());
        if (prepared == null) {
            return List.of();
        }
        List<ResolvedCommandDTO> commands = new ArrayList<>();
        for (SkillInfo skill : prepared.skills()) {
            resolved(session, prepared, skill).ifPresent(commands::add);
        }
        commands.sort(Comparator.comparing(ResolvedCommandDTO::name));
        return commands;
    }

    private Optional<ResolvedCommandDTO> resolved(
            RuntimeSessionDTO session, PreparedAgentRuntime prepared, SkillInfo skill) {
        String skillName = skill.name();
        if (!SkillNamePatterns.isStrictValid(skillName) || !hasSkillMarkdown(prepared, skillName)) {
            LOGGER.warn("Ignoring invalid Runtime skill command: name={}", skillName);
            return Optional.empty();
        }
        boolean idle = RuntimeSessionState.IDLE.matches(session.getState());
        String busyCode = RuntimeErrorCode.SESSION_BUSY.name();
        ResolvedCommandDTO.InputDTO input = new ResolvedCommandDTO.InputDTO(
                CommandInputMode.OPTIONAL.value(), idle, idle ? null : busyCode, true, "request", List.of());
        SkillCommandSnapshotDTO snapshot = new SkillCommandSnapshotDTO(
                prepared.agentId(), agentVersion(prepared), skill.id(), skill.version(), skill.content());
        return Optional.of(new ResolvedCommandDTO(
                COMMAND_PREFIX + skillName,
                CommandKind.SKILL,
                skill.description(),
                idle,
                idle ? null : busyCode,
                input,
                snapshot));
    }

    private String agentVersion(PreparedAgentRuntime prepared) {
        return prepared.metadata() == null ? null : prepared.metadata().version();
    }

    private boolean hasSkillMarkdown(PreparedAgentRuntime prepared, String skillName) {
        Path skillFile = prepared.agentRoot()
                .resolve(AgentRuntimeManager.CAMPUSCLAW_DIRECTORY)
                .resolve("skills")
                .resolve(skillName)
                .resolve(SKILL_MARKDOWN_FILE);
        try {
            if (!Files.isRegularFile(skillFile, LinkOption.NOFOLLOW_LINKS)) {
                return false;
            }
            Path realRoot = prepared.agentRoot().toFile().getCanonicalFile().toPath();
            Path expected = realRoot.resolve(AgentRuntimeManager.CAMPUSCLAW_DIRECTORY)
                    .resolve("skills")
                    .resolve(skillName)
                    .resolve(SKILL_MARKDOWN_FILE);
            Path canonicalFile = skillFile.toFile().getCanonicalFile().toPath();
            return canonicalFile.startsWith(realRoot) && canonicalFile.equals(expected);
        } catch (IOException error) {
            LOGGER.warn(
                    "Ignoring Runtime skill command with unreadable folder: name={}, cause={}",
                    skillName,
                    error.getMessage());
            return false;
        }
    }
}
